* fixing undocumented bug where cart icon was not clickable on small screens on Safari

--- a/src/sass/bootstrap/_header.scss
+++ b/src/sass/bootstrap/_header.scss
@@ -400,11 +400,21 @@
       width: 50px;
       text-align: right;
 
+      a {
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+      }
+
       // desktop
       @media (min-width: $breakpoint-header-min) {
         order: 3;
         margin: 0 2rem 0 0;
         width: 200px;
+
+        a {
+          display: flex;
+        }
       }
     }
 
